大改注册框架，融入1.19.3+的数据生成系统